--- a/visualization/data.ipynb
+++ b/visualization/data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,22 +409,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['Very good', 'Fair', 'Good', 'Excellent', 'Poor'], dtype=object)"
+       "array(['No', 'Yes'], dtype=object)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[\"GeneralHealth\"].unique()"
+    "df[\"HadAsthma\"].unique()"
    ]
   },
   {
@@ -461,30 +461,280 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "count    240141.000000\n",
-       "mean         28.668279\n",
-       "std           6.518453\n",
-       "min          12.020000\n",
-       "25%          24.250000\n",
-       "50%          27.460000\n",
-       "75%          31.890000\n",
-       "max          97.650000\n",
-       "Name: BMI, dtype: float64"
+       "count     240141\n",
+       "unique         2\n",
+       "top           No\n",
+       "freq      230194\n",
+       "Name: HadStroke, dtype: object"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[\"BMI\"].describe()"
+    "df[\"HadStroke\"].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['No', 'Yes'], dtype=object)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"HadStroke\"].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "count_df = df.groupby(['State', 'SmokerStatus']).size().reset_index(name='count')\n",
+    "\n",
+    "# Calculate the total counts per state\n",
+    "total_counts = df.groupby('State').size().reset_index(name='total')\n",
+    "\n",
+    "# Merge the counts data with the total counts\n",
+    "percentage_df = pd.merge(count_df, total_counts, on='State')\n",
+    "\n",
+    "# Calculate the percentage\n",
+    "percentage_df['percentage'] = (percentage_df['count'] / percentage_df['total']) * 100\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>State</th>\n",
+       "      <th>SmokerStatus</th>\n",
+       "      <th>count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Current smoker - now smokes every day</td>\n",
+       "      <td>206</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Current smoker - now smokes some days</td>\n",
+       "      <td>70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Former smoker</td>\n",
+       "      <td>487</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Never smoked</td>\n",
+       "      <td>1139</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Alaska</td>\n",
+       "      <td>Current smoker - now smokes every day</td>\n",
+       "      <td>334</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>199</th>\n",
+       "      <td>Wisconsin</td>\n",
+       "      <td>Never smoked</td>\n",
+       "      <td>3512</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>200</th>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>Current smoker - now smokes every day</td>\n",
+       "      <td>229</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>201</th>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>Current smoker - now smokes some days</td>\n",
+       "      <td>82</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>202</th>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>Former smoker</td>\n",
+       "      <td>686</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>203</th>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>Never smoked</td>\n",
+       "      <td>1413</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>204 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         State                           SmokerStatus  count\n",
+       "0      Alabama  Current smoker - now smokes every day    206\n",
+       "1      Alabama  Current smoker - now smokes some days     70\n",
+       "2      Alabama                          Former smoker    487\n",
+       "3      Alabama                           Never smoked   1139\n",
+       "4       Alaska  Current smoker - now smokes every day    334\n",
+       "..         ...                                    ...    ...\n",
+       "199  Wisconsin                           Never smoked   3512\n",
+       "200    Wyoming  Current smoker - now smokes every day    229\n",
+       "201    Wyoming  Current smoker - now smokes some days     82\n",
+       "202    Wyoming                          Former smoker    686\n",
+       "203    Wyoming                           Never smoked   1413\n",
+       "\n",
+       "[204 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "count_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>State</th>\n",
+       "      <th>SmokerStatus</th>\n",
+       "      <th>count</th>\n",
+       "      <th>total</th>\n",
+       "      <th>percentage</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Alaska</td>\n",
+       "      <td>Current smoker - now smokes every day</td>\n",
+       "      <td>334</td>\n",
+       "      <td>3205</td>\n",
+       "      <td>10.421217</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Alaska</td>\n",
+       "      <td>Current smoker - now smokes some days</td>\n",
+       "      <td>124</td>\n",
+       "      <td>3205</td>\n",
+       "      <td>3.868955</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Alaska</td>\n",
+       "      <td>Former smoker</td>\n",
+       "      <td>952</td>\n",
+       "      <td>3205</td>\n",
+       "      <td>29.703588</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Alaska</td>\n",
+       "      <td>Never smoked</td>\n",
+       "      <td>1795</td>\n",
+       "      <td>3205</td>\n",
+       "      <td>56.006240</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    State                           SmokerStatus  count  total  percentage\n",
+       "4  Alaska  Current smoker - now smokes every day    334   3205   10.421217\n",
+       "5  Alaska  Current smoker - now smokes some days    124   3205    3.868955\n",
+       "6  Alaska                          Former smoker    952   3205   29.703588\n",
+       "7  Alaska                           Never smoked   1795   3205   56.006240"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "percentage_df[percentage_df['State'] == 'Alaska']"
    ]
   },
   {
