--- a/model/regression_oversample.ipynb
+++ b/model/regression_oversample.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-03-19T19:16:00.116533Z",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-03-19T19:12:35.293478Z",
@@ -213,7 +213,7 @@
        "4              Yes  Very good        8.0     No            No         No  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-03-19T19:12:52.897807Z",
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,20 +302,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 58,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
+    "def normalize_row(row, training_data): # insert a new data and normalize with training data and get the normalized output\n",
+    "    training_data.append(row)\n",
+    "    scaler = StandardScaler()\n",
+    "    training_data = scaler.fit_transform(training_data)\n",
+    "    return training_data.iloc[-1]\n",
     "X=df1.drop('HeartDisease',axis=1)\n",
     "Y=df1['HeartDisease']\n",
     "X_train, X_test, y_train, y_test = split_data(X,Y)\n",
+    "X_train_oversampled, Y_train_oversampled = over_sample_date(X_train, y_train, data_rate = 1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'DataFrame' object has no attribute 'append'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[59], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m df_new \u001b[38;5;241m=\u001b[39m X_train_oversampled\u001b[38;5;241m.\u001b[39miloc[\u001b[38;5;241m0\u001b[39m]\n\u001b[0;32m----> 3\u001b[0m df_new \u001b[38;5;241m=\u001b[39m normalize_row(df_new, X_train_oversampled)\n",
+      "Cell \u001b[0;32mIn[58], line 2\u001b[0m, in \u001b[0;36mnormalize_row\u001b[0;34m(row, training_data)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mnormalize_row\u001b[39m(row, training_data): \u001b[38;5;66;03m# insert a new data and normalize with training data and get the normalized output\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m     training_data\u001b[38;5;241m.\u001b[39mappend(row)\n\u001b[1;32m      3\u001b[0m     scaler \u001b[38;5;241m=\u001b[39m StandardScaler()\n\u001b[1;32m      4\u001b[0m     training_data \u001b[38;5;241m=\u001b[39m scaler\u001b[38;5;241m.\u001b[39mfit_transform(training_data)\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/pandas/core/generic.py:5989\u001b[0m, in \u001b[0;36mNDFrame.__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   5982\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m (\n\u001b[1;32m   5983\u001b[0m     name \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_internal_names_set\n\u001b[1;32m   5984\u001b[0m     \u001b[38;5;129;01mand\u001b[39;00m name \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_metadata\n\u001b[1;32m   5985\u001b[0m     \u001b[38;5;129;01mand\u001b[39;00m name \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_accessors\n\u001b[1;32m   5986\u001b[0m     \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_info_axis\u001b[38;5;241m.\u001b[39m_can_hold_identifiers_and_holds_name(name)\n\u001b[1;32m   5987\u001b[0m ):\n\u001b[1;32m   5988\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m[name]\n\u001b[0;32m-> 5989\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mobject\u001b[39m\u001b[38;5;241m.\u001b[39m\u001b[38;5;21m__getattribute__\u001b[39m(\u001b[38;5;28mself\u001b[39m, name)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'append'"
+     ]
+    }
+   ],
+   "source": [
+    "df_new = X_train_oversampled.iloc[0]\n",
     "\n",
-    "X_train_oversampled, Y_train_oversampled = over_sample_date(X_train, y_train, data_rate = 1)\n",
+    "df_new = normalize_row(df_new, X_train_oversampled)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "scaler = StandardScaler()\n",
     "X_train_oversampled = scaler.fit_transform(X_train_oversampled)\n",
     "X_test = scaler.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "df_new = scaler.fit_transform(df_new)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-1.82421407,  1.05132024, -0.24985088,  3.36466358, -0.51544353,\n",
+       "        3.08195449,  1.87973398, -1.03607012,  1.01408138,  0.46725199,\n",
+       "       -0.5375019 ,  0.6144571 , -0.84986931,  0.56467944, -0.42111314,\n",
+       "       -0.27195243, -0.37791696])"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_new[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-1.83305537,  1.01772584, -0.24441643,  3.12754643, -0.53868494,\n",
+       "        3.03133783,  1.77131768, -1.05855574,  0.96123949,  0.45983411,\n",
+       "       -0.56692066,  0.63357223, -0.86652053,  0.54926309, -0.42799676,\n",
+       "       -0.28910303, -0.39277088])"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train_oversampled[0]"
    ]
   },
   {
