--- a/model/regression_oversample.ipynb
+++ b/model/regression_oversample.ipynb
@@ -302,17 +302,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 66,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
     "def normalize_row(row, training_data): # insert a new data and normalize with training data and get the normalized output\n",
-    "    training_data.append(row)\n",
+    "    pd.concat([row, training_data])\n",
     "    scaler = StandardScaler()\n",
     "    training_data = scaler.fit_transform(training_data)\n",
-    "    return training_data.iloc[-1]\n",
+    "    return training_data[0]\n",
     "X=df1.drop('HeartDisease',axis=1)\n",
     "Y=df1['HeartDisease']\n",
     "X_train, X_test, y_train, y_test = split_data(X,Y)\n",
@@ -321,37 +321,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'DataFrame' object has no attribute 'append'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[59], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m df_new \u001b[38;5;241m=\u001b[39m X_train_oversampled\u001b[38;5;241m.\u001b[39miloc[\u001b[38;5;241m0\u001b[39m]\n\u001b[0;32m----> 3\u001b[0m df_new \u001b[38;5;241m=\u001b[39m normalize_row(df_new, X_train_oversampled)\n",
-      "Cell \u001b[0;32mIn[58], line 2\u001b[0m, in \u001b[0;36mnormalize_row\u001b[0;34m(row, training_data)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mnormalize_row\u001b[39m(row, training_data): \u001b[38;5;66;03m# insert a new data and normalize with training data and get the normalized output\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m     training_data\u001b[38;5;241m.\u001b[39mappend(row)\n\u001b[1;32m      3\u001b[0m     scaler \u001b[38;5;241m=\u001b[39m StandardScaler()\n\u001b[1;32m      4\u001b[0m     training_data \u001b[38;5;241m=\u001b[39m scaler\u001b[38;5;241m.\u001b[39mfit_transform(training_data)\n",
-      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/pandas/core/generic.py:5989\u001b[0m, in \u001b[0;36mNDFrame.__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   5982\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m (\n\u001b[1;32m   5983\u001b[0m     name \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_internal_names_set\n\u001b[1;32m   5984\u001b[0m     \u001b[38;5;129;01mand\u001b[39;00m name \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_metadata\n\u001b[1;32m   5985\u001b[0m     \u001b[38;5;129;01mand\u001b[39;00m name \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_accessors\n\u001b[1;32m   5986\u001b[0m     \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_info_axis\u001b[38;5;241m.\u001b[39m_can_hold_identifiers_and_holds_name(name)\n\u001b[1;32m   5987\u001b[0m ):\n\u001b[1;32m   5988\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m[name]\n\u001b[0;32m-> 5989\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mobject\u001b[39m\u001b[38;5;241m.\u001b[39m\u001b[38;5;21m__getattribute__\u001b[39m(\u001b[38;5;28mself\u001b[39m, name)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'append'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-0.6396843   1.01743866 -0.24283626 -0.32216599  2.47242786 -0.49717844\n",
+      "  1.77326158 -1.05758476  1.26188349  0.46168833 -0.56236812 -1.5800868\n",
+      "  0.57892723  0.55411417  2.33595123 -0.2893677  -0.39308983]\n"
      ]
     }
    ],
    "source": [
     "df_new = X_train_oversampled.iloc[0]\n",
     "\n",
-    "df_new = normalize_row(df_new, X_train_oversampled)"
+    "df_new = normalize_row(df_new, X_train_oversampled)\n",
+    "print(df_new)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-0.6396843   1.01743866 -0.24283626 -0.32216599  2.47242786 -0.49717844\n",
+      "  1.77326158 -1.05758476  1.26188349  0.46168833 -0.56236812 -1.5800868\n",
+      "  0.57892723  0.55411417  2.33595123 -0.2893677  -0.39308983]\n"
+     ]
+    }
+   ],
    "source": [
     "scaler = StandardScaler()\n",
     "X_train_oversampled = scaler.fit_transform(X_train_oversampled)\n",
+    "print(X_train_oversampled[0])\n",
     "X_test = scaler.transform(X_test)"
    ]
   },
