--- a/model/regression_oversample.ipynb
+++ b/model/regression_oversample.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 74,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-03-19T19:16:00.116533Z",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 75,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-03-19T19:12:35.293478Z",
@@ -213,7 +213,7 @@
        "4              Yes  Very good        8.0     No            No         No  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 76,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-03-19T19:12:52.897807Z",
@@ -302,126 +302,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 77,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "def normalize_row(row, training_data): # insert a new data and normalize with training data and get the normalized output\n",
-    "    pd.concat([row, training_data])\n",
-    "    scaler = StandardScaler()\n",
-    "    training_data = scaler.fit_transform(training_data)\n",
-    "    return training_data[0]\n",
+    "# get the training dataset and test dataset\n",
     "X=df1.drop('HeartDisease',axis=1)\n",
     "Y=df1['HeartDisease']\n",
     "X_train, X_test, y_train, y_test = split_data(X,Y)\n",
-    "X_train_oversampled, Y_train_oversampled = over_sample_date(X_train, y_train, data_rate = 1)\n"
+    "X_train_oversampled, Y_train_oversampled = over_sample_date(X_train, y_train, data_rate = 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[-0.6396843   1.01743866 -0.24283626 -0.32216599  2.47242786 -0.49717844\n",
-      "  1.77326158 -1.05758476  1.26188349  0.46168833 -0.56236812 -1.5800868\n",
-      "  0.57892723  0.55411417  2.33595123 -0.2893677  -0.39308983]\n"
-     ]
-    }
-   ],
-   "source": [
-    "df_new = X_train_oversampled.iloc[0]\n",
-    "\n",
-    "df_new = normalize_row(df_new, X_train_oversampled)\n",
-    "print(df_new)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[-0.6396843   1.01743866 -0.24283626 -0.32216599  2.47242786 -0.49717844\n",
-      "  1.77326158 -1.05758476  1.26188349  0.46168833 -0.56236812 -1.5800868\n",
-      "  0.57892723  0.55411417  2.33595123 -0.2893677  -0.39308983]\n"
-     ]
-    }
-   ],
-   "source": [
-    "scaler = StandardScaler()\n",
-    "X_train_oversampled = scaler.fit_transform(X_train_oversampled)\n",
-    "print(X_train_oversampled[0])\n",
-    "X_test = scaler.transform(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "df_new = scaler.fit_transform(df_new)"
+    "# transform the training data\n",
+    "scaler = StandardScaler()\n",
+    "X_train_oversampled_T = scaler.fit_transform(X_train_oversampled)\n",
+    "X_test_T = scaler.transform(X_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([-1.82421407,  1.05132024, -0.24985088,  3.36466358, -0.51544353,\n",
-       "        3.08195449,  1.87973398, -1.03607012,  1.01408138,  0.46725199,\n",
-       "       -0.5375019 ,  0.6144571 , -0.84986931,  0.56467944, -0.42111314,\n",
-       "       -0.27195243, -0.37791696])"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_new[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([-1.83305537,  1.01772584, -0.24441643,  3.12754643, -0.53868494,\n",
-       "        3.03133783,  1.77131768, -1.05855574,  0.96123949,  0.45983411,\n",
-       "       -0.56692066,  0.63357223, -0.86652053,  0.54926309, -0.42799676,\n",
-       "       -0.28910303, -0.39277088])"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X_train_oversampled[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -431,37 +339,212 @@
       "              precision    recall  f1-score   support\n",
       "\n",
       "           0       0.97      0.74      0.84     58484\n",
-      "           1       0.22      0.77      0.34      5475\n",
+      "           1       0.22      0.76      0.34      5475\n",
       "\n",
       "    accuracy                           0.74     63959\n",
       "   macro avg       0.59      0.75      0.59     63959\n",
       "weighted avg       0.91      0.74      0.80     63959\n",
       "\n",
-      "0.7414124673619037\n"
+      "0.08560171359777358\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/pb/anaconda3/lib/python3.11/site-packages/sklearn/base.py:432: UserWarning: X has feature names, but LogisticRegression was fitted without feature names\n",
+      "  warnings.warn(\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([[43212, 15272],\n",
-       "       [ 1267,  4208]])"
+       "array([[43346, 15138],\n",
+       "       [ 1296,  4179]])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "log_reg = LogisticRegression()\n",
-    "log_reg.fit(X_train_oversampled, Y_train_oversampled)\n",
+    "log_reg.fit(X_train_oversampled_T, Y_train_oversampled)\n",
     "\n",
-    "y_pred = log_reg.predict(X_test)\n",
+    "y_pred = log_reg.predict(X_test_T)\n",
     "#acc=log_reg.score(y_test,y_pred)\n",
     "print(classification_report(y_test, y_pred))\n",
     "accuracy=log_reg.score(X_test,y_test)\n",
     "print(accuracy)\n",
     "confusion_matrix(y_test,y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[ 0.11093823,  0.23342849, -0.05418123,  0.3869928 ,  0.25568301,\n",
+       "          0.11938427,  0.1761645 ,  0.37207277,  1.02793546,  0.02749455,\n",
+       "          0.26370807, -0.04490726, -0.03153452, -0.04868793,  0.13806599,\n",
+       "          0.19823492,  0.04858497]]),\n",
+       " array([-0.0196599]))"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "log_reg.coef_,log_reg.intercept_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-0.72063279  1.01757354 -0.24489727 -0.32061579 -0.44128201 -0.49706031\n",
+      "  -0.56345196  0.94606575 -1.70156519 -1.25708171 -0.56441101  0.63194933\n",
+      "   1.30354385 -0.69905489 -0.42729395 -0.28913775 -0.39388304]]\n",
+      "[[ True  True  True  True  True  True  True  True  True  True  True  True\n",
+      "   True  True  True  True  True]]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/pb/anaconda3/lib/python3.11/site-packages/sklearn/base.py:439: UserWarning: X does not have valid feature names, but StandardScaler was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "def normalize_row(row, scaler):\n",
+    "    # Reshape row to match expected input of scaler\n",
+    "    row_reshaped = row.values.reshape(1, -1)\n",
+    "    # Apply the same transformation as training data\n",
+    "    normalized_row = scaler.transform(row_reshaped)\n",
+    "    return normalized_row  # Flatten to match the shape of the original row\n",
+    "\n",
+    "# Assuming 'scaler' is already fitted to 'X_train_oversampled'\n",
+    "scaler = StandardScaler().fit(X_train_oversampled)\n",
+    "\n",
+    "df_new = X_train_oversampled.iloc[0]\n",
+    "\n",
+    "df_new_normalized = normalize_row(df_new, scaler)\n",
+    "\n",
+    "print(df_new_normalized)\n",
+    "print(X_train_oversampled_T[0] == df_new_normalized)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The predicted probability is: [0.91205902]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/pb/anaconda3/lib/python3.11/site-packages/sklearn/base.py:439: UserWarning: X does not have valid feature names, but StandardScaler was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Use user input to get \n",
+    "import numpy as np\n",
+    "\n",
+    "user_input = [21.93, 0, 0.0, 0.0, 20.0, 0.0, 1.0, 1.0, 9.0, 5.0, 2.0, 0.0, 1.0, 3.0, 0.0, 1.0, 1.0]\n",
+    "\n",
+    "user_input_T = normalize_row(pd.DataFrame([user_input]),scaler)\n",
+    "coef = np.array([0.11093823, 0.23342849, -0.05418123, 0.3869928, 0.25568301,\n",
+    "                 0.11938427, 0.1761645, 0.37207277, 1.02793546, 0.02749455,\n",
+    "                 0.26370807, -0.04490726, -0.03153452, -0.04868793, 0.13806599,\n",
+    "                 0.19823492, 0.04858497]).flatten()\n",
+    "intercept = -0.0196599\n",
+    "\n",
+    "#user_input_T = np.array([-0.72063279, 1.01757354, -0.24489727, -0.32061579, -0.44128201, -0.49706031,\n",
+    "#              -0.56345196, 0.94606575, -1.70156519, -1.25708171, -0.56441101, 0.63194933,\n",
+    "#              1.30354385, -0.69905489, -0.42729395, -0.28913775, -0.39388304])\n",
+    "\n",
+    "# Compute the linear combination of inputs and weights\n",
+    "z = np.dot(user_input_T, coef) + intercept\n",
+    "\n",
+    "# Apply the logistic function\n",
+    "p = 1 / (1 + np.exp(-z))\n",
+    "\n",
+    "print(\"The predicted probability is:\", p)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "The truth value of a Series is ambiguous. Use a.empty, a.bool(), a.item(), a.any() or a.all().",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[127], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m X_train_oversampled\u001b[38;5;241m.\u001b[39miloc[\u001b[38;5;241m30\u001b[39m]\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m1000\u001b[39m):\n\u001b[0;32m----> 3\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m Y_train_oversampled[i] \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m      4\u001b[0m         \u001b[38;5;28mprint\u001b[39m(i)\n\u001b[1;32m      5\u001b[0m         \u001b[38;5;28;01mbreak\u001b[39;00m\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/pandas/core/generic.py:1466\u001b[0m, in \u001b[0;36mNDFrame.__nonzero__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1464\u001b[0m \u001b[38;5;129m@final\u001b[39m\n\u001b[1;32m   1465\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__nonzero__\u001b[39m(\u001b[38;5;28mself\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m NoReturn:\n\u001b[0;32m-> 1466\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m   1467\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThe truth value of a \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mtype\u001b[39m(\u001b[38;5;28mself\u001b[39m)\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__name__\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m is ambiguous. \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   1468\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mUse a.empty, a.bool(), a.item(), a.any() or a.all().\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   1469\u001b[0m     )\n",
+      "\u001b[0;31mValueError\u001b[0m: The truth value of a Series is ambiguous. Use a.empty, a.bool(), a.item(), a.any() or a.all()."
+     ]
+    }
+   ],
+   "source": [
+    "X_train_oversampled.iloc[30]\n",
+    "for i in range(1000):\n",
+    "    if Y_train_oversampled[i] == 1:\n",
+    "        print(i)\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[31.93, 1.0, 0.0, 0.0, 20.0, 0.0, 1.0, 1.0, 9.0, 5.0, 2.0, 0.0, 1.0, 3.0, 0.0, 1.0, 1.0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(list(X_train_oversampled.iloc[258229]))"
    ]
   },
   {
